--- a/lupa/Views/LupaDefaults.xib
+++ b/lupa/Views/LupaDefaults.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="LupaDefaults" customModule="lupa" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="LupaDefaults" customModule="Lupa" customModuleProvider="target">
             <connections>
                 <outlet property="bindUserID" destination="Epw-Gr-jBo" id="qvk-oJ-vEi"/>
                 <outlet property="customShortcutView" destination="xnT-NL-0AR" id="yan-ez-Yq4"/>
@@ -25,12 +24,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Lupa Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" hasShadow="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5" customClass="LupaDefaultsWindow" customModule="lupa" customModuleProvider="target">
+        <window title="Lupa Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" hasShadow="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5" customClass="LupaDefaultsWindow" customModule="Lupa" customModuleProvider="target">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="100" y="725" width="504" height="565"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <view key="contentView" id="se5-gp-TjO" customClass="LupaDefaultsView" customModule="lupa" customModuleProvider="target">
+            <view key="contentView" id="se5-gp-TjO" customClass="LupaDefaultsView" customModule="Lupa" customModuleProvider="target">
                 <rect key="frame" x="0.0" y="0.0" width="504" height="565"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
